[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mai-inspector"
version = "1.0.0"
description = "Decision Intelligence for High-Stakes Decisions"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Alexander Bykovski" }
]
keywords = ["decision-intelligence", "evidence", "due-diligence", "openai", "assessment"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[tool.setuptools]
packages = ["agent", "agent.engine"]
